k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: musify
  labels:
    name: musify
    environment: production
